--- a/internal/projects/bulleit/Stamped/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Stamped/StampDetailViewController.xib
@@ -451,7 +451,6 @@
 						<string key="NSFrame">{{208, 367}, {80, 49}}</string>
 						<reference key="NSSuperview" ref="880728759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -987,7 +986,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">67</int>
+			<int key="maxID">69</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1002,9 +1001,11 @@
 							<string>handleRestampButtonTap:</string>
 							<string>handleSendButtonTap:</string>
 							<string>handleTodoButtonTap:</string>
+							<string>handleUserImageViewTap:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1017,6 +1018,7 @@
 							<string>handleRestampButtonTap:</string>
 							<string>handleSendButtonTap:</string>
 							<string>handleTodoButtonTap:</string>
+							<string>handleUserImageViewTap:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1030,6 +1032,10 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">handleTodoButtonTap:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">handleUserImageViewTap:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 						</object>
@@ -1150,7 +1156,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UserImageView</string>
-					<string key="superclassName">UIView</string>
+					<string key="superclassName">UIButton</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/UserImageView.h</string>
